--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "expo": "^34.0.1",
-    "lottie-react-native": "^3.1.0",
+    "expo-linear-gradient": "^7.0.1",
     "native-base": "^2.13.7",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
-    "react-native-animated-loader": "0.0.8",
     "react-native-web": "^0.11.4"
   },
   "devDependencies": {
